WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111807
Custom Elements: CustomElement constructor shouldn't share function instance
https://bugs.webkit.org/show_bug.cgi?id=111807
Summary
Custom Elements: CustomElement constructor shouldn't share function instance
Hajime Morrita
Reported
2013-03-07 19:06:04 PST
This is a facepalm bug... A fix will come shortly.
Attachments
Patch
(5.01 KB, patch)
2013-03-07 19:22 PST
,
Hajime Morrita
haraken
: review+
haraken
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2013-03-07 19:22:32 PST
Created
attachment 192131
[details]
Patch
Hajime Morrita
Comment 2
2013-03-07 20:28:12 PST
Committed
r145175
: <
http://trac.webkit.org/changeset/145175
>
Adam Barth
Comment 3
2013-03-08 11:40:29 PST
Comment on
attachment 192131
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192131&action=review
> Source/WebCore/bindings/v8/V8AdaptorFunction.cpp:79 > - v8::Handle<v8::Function> adaptor = v8::Handle<v8::Function>::Cast(getTemplate(isolate, worldType(isolate))->GetFunction()); > + v8::Handle<v8::Function> adaptor = v8::Handle<v8::Function>::Cast(getTemplate(isolate, worldType(isolate))->GetFunction()->Clone());
Sorry for missing this in the review.
Hajime Morrita
Comment 4
2013-03-09 01:09:05 PST
(In reply to
comment #3
)
> > Sorry for missing this in the review.
Well, the test should have been more comprehensive.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug