Custom Elements: CustomElement constructor shouldn't share function instance https://bugs.webkit.org/show_bug.cgi?id=111807

Reviewed by Kentaro Hara.

Source/WebCore:

Adaptor functions of custom elements unintentionally share the instance.
This fix gives new one for each.

Test: Updated fast/dom/custom/document-register-basic.html

* bindings/v8/V8AdaptorFunction.cpp:
(WebCore::V8AdaptorFunction::wrap):

LayoutTests:

* fast/dom/custom/document-register-basic-expected.txt:
* fast/dom/custom/document-register-basic.html:

Canonical link: https://commits.webkit.org/130164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145175 268f45cc-cd09-0410-ab3c-d52691b4dbfc